--- a/index2.html
+++ b/index2.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam inventore necessitatibus odit obcaecati quidem vitae eius sint odio dolor est?</p>
+    <p>Lorem ipsum dolor,  Laboriosam inventore necessitatibus odit obcaecati quidem vitae eius sint odio dolor est?</p>
 </body>
 </html>
